# serializer version: 1
# name: test_entities[botched]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 19.7,
        'friendly_name': 'My Home',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'icon': 'mdi:thermostat',
        'max_temp': 35,
        'min_temp': 7,
        'preset_mode': 'eco',
        'preset_modes': list([
          'Reset',
          'eco',
          'away',
          'home',
          'Custom',
        ]),
        'status': dict({
          'active_system_faults': list([
          ]),
          'system_id': '3432522',
          'system_mode_status': dict({
            'is_permanent': True,
            'mode': 'AutoWithEco',
          }),
        }),
        'supported_features': <ClimateEntityFeature: 400>,
      }),
      'context': <ANY>,
      'entity_id': 'climate.my_home',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': None,
        'friendly_name': 'Dead Zone',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'none',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'FollowSchedule',
            'target_heat_temperature': 17.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': False,
          }),
          'zone_id': '3432521',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 17.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.dead_zone',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 19.0,
        'friendly_name': 'Main Room',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'permanent',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
            dict({
              'faultType': 'TempZoneActuatorCommunicationLost',
              'since': '2022-03-02T15:56:01',
            }),
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'PermanentOverride',
            'target_heat_temperature': 17.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 19.0,
          }),
          'zone_id': '3432576',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 17.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.main_room',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 19.0,
        'friendly_name': 'Front Room',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'temporary',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
            dict({
              'faultType': 'TempZoneActuatorLowBattery',
              'since': '2022-03-02T04:50:20',
            }),
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'TemporaryOverride',
            'target_heat_temperature': 21.0,
            'until': '2022-03-07T20:00:00+01:00',
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 19.0,
          }),
          'zone_id': '3432577',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 21.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.front_room',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 20.0,
        'friendly_name': 'Kitchen',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'none',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'FollowSchedule',
            'target_heat_temperature': 17.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 20.0,
          }),
          'zone_id': '3432578',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 17.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.kitchen',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 20.0,
        'friendly_name': 'Bathroom Dn',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'none',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'FollowSchedule',
            'target_heat_temperature': 16.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 20.0,
          }),
          'zone_id': '3432579',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 16.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.bathroom_dn',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 21.0,
        'friendly_name': 'Main Bedroom',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'none',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'FollowSchedule',
            'target_heat_temperature': 16.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 21.0,
          }),
          'zone_id': '3432580',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 16.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.main_bedroom',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 19.5,
        'friendly_name': 'Kids Room',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'none',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'FollowSchedule',
            'target_heat_temperature': 17.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 19.5,
          }),
          'zone_id': '3449703',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 17.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.kids_room',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'away_mode': 'on',
        'current_temperature': 23,
        'friendly_name': 'Domestic Hot Water',
        'icon': 'mdi:thermometer-lines',
        'max_temp': 60,
        'min_temp': 43,
        'operation_list': list([
          'auto',
          'on',
          'off',
        ]),
        'operation_mode': 'off',
        'status': dict({
          'active_faults': list([
          ]),
          'dhw_id': '3933910',
          'setpoints': dict({
            'next_sp_from': '2024-07-10T13:00:00+01:00',
            'next_sp_state': 'Off',
            'this_sp_from': '2024-07-10T12:00:00+01:00',
            'this_sp_state': 'On',
          }),
          'state_status': dict({
            'mode': 'PermanentOverride',
            'state': 'Off',
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 23.0,
          }),
        }),
        'supported_features': <WaterHeaterEntityFeature: 6>,
        'target_temp_high': None,
        'target_temp_low': None,
        'temperature': None,
      }),
      'context': <ANY>,
      'entity_id': 'water_heater.domestic_hot_water',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
  ])
# ---
# name: test_entities[default]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 19.7,
        'friendly_name': 'My Home',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'icon': 'mdi:thermostat',
        'max_temp': 35,
        'min_temp': 7,
        'preset_mode': 'eco',
        'preset_modes': list([
          'Reset',
          'eco',
          'away',
          'home',
          'Custom',
        ]),
        'status': dict({
          'active_system_faults': list([
          ]),
          'system_id': '3432522',
          'system_mode_status': dict({
            'is_permanent': True,
            'mode': 'AutoWithEco',
          }),
        }),
        'supported_features': <ClimateEntityFeature: 400>,
      }),
      'context': <ANY>,
      'entity_id': 'climate.my_home',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': None,
        'friendly_name': 'Dead Zone',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'none',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'FollowSchedule',
            'target_heat_temperature': 17.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': False,
          }),
          'zone_id': '3432521',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 17.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.dead_zone',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 19.0,
        'friendly_name': 'Main Room',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'permanent',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'PermanentOverride',
            'target_heat_temperature': 17.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 19.0,
          }),
          'zone_id': '3432576',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 17.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.main_room',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 19.0,
        'friendly_name': 'Front Room',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'temporary',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'TemporaryOverride',
            'target_heat_temperature': 21.0,
            'until': '2022-03-07T20:00:00+01:00',
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 19.0,
          }),
          'zone_id': '3432577',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 21.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.front_room',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 20.0,
        'friendly_name': 'Kitchen',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'none',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'FollowSchedule',
            'target_heat_temperature': 17.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 20.0,
          }),
          'zone_id': '3432578',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 17.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.kitchen',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 20.0,
        'friendly_name': 'Bathroom Dn',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'none',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'FollowSchedule',
            'target_heat_temperature': 16.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 20.0,
          }),
          'zone_id': '3432579',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 16.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.bathroom_dn',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 21.0,
        'friendly_name': 'Main Bedroom',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'none',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'FollowSchedule',
            'target_heat_temperature': 16.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 21.0,
          }),
          'zone_id': '3432580',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 16.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.main_bedroom',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 19.5,
        'friendly_name': 'Kids Room',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'none',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'FollowSchedule',
            'target_heat_temperature': 17.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 19.5,
          }),
          'zone_id': '3449703',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 17.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.kids_room',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 19.5,
        'friendly_name': 'Spare Room',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'permanent',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'PermanentOverride',
            'target_heat_temperature': 14.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 19.5,
          }),
          'zone_id': '3450733',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 14.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.spare_room',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'away_mode': 'on',
        'current_temperature': 23,
        'friendly_name': 'Domestic Hot Water',
        'icon': 'mdi:thermometer-lines',
        'max_temp': 60,
        'min_temp': 43,
        'operation_list': list([
          'auto',
          'on',
          'off',
        ]),
        'operation_mode': 'off',
        'status': dict({
          'active_faults': list([
          ]),
          'dhw_id': '3933910',
          'setpoints': dict({
            'next_sp_from': '2024-07-10T13:00:00+01:00',
            'next_sp_state': 'Off',
            'this_sp_from': '2024-07-10T12:00:00+01:00',
            'this_sp_state': 'On',
          }),
          'state_status': dict({
            'mode': 'PermanentOverride',
            'state': 'Off',
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 23.0,
          }),
        }),
        'supported_features': <WaterHeaterEntityFeature: 6>,
        'target_temp_high': None,
        'target_temp_low': None,
        'temperature': None,
      }),
      'context': <ANY>,
      'entity_id': 'water_heater.domestic_hot_water',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
  ])
# ---
# name: test_entities[h032585]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 21.5,
        'friendly_name': 'My Home',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'icon': 'mdi:thermostat',
        'max_temp': 35,
        'min_temp': 7,
        'status': dict({
          'active_system_faults': list([
          ]),
          'system_id': '416856',
          'system_mode_status': dict({
            'is_permanent': True,
            'mode': 'Heat',
          }),
        }),
        'supported_features': <ClimateEntityFeature: 384>,
      }),
      'context': <ANY>,
      'entity_id': 'climate.my_home',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 21.5,
        'friendly_name': 'THERMOSTAT',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 32.0,
        'min_temp': 4.5,
        'preset_mode': 'none',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'FollowSchedule',
            'target_heat_temperature': 21.5,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 21.5,
          }),
          'zone_id': '416856',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 21.5,
      }),
      'context': <ANY>,
      'entity_id': 'climate.thermostat',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
  ])
# ---
# name: test_entities[h099625]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 21.5,
        'friendly_name': 'My Home',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'icon': 'mdi:thermostat',
        'max_temp': 35,
        'min_temp': 7,
        'preset_mode': None,
        'preset_modes': list([
          'eco',
          'away',
        ]),
        'status': dict({
          'active_system_faults': list([
          ]),
          'system_id': '8557535',
          'system_mode_status': dict({
            'is_permanent': True,
            'mode': 'Auto',
          }),
        }),
        'supported_features': <ClimateEntityFeature: 400>,
      }),
      'context': <ANY>,
      'entity_id': 'climate.my_home',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 21.5,
        'friendly_name': 'THERMOSTAT',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'none',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'FollowSchedule',
            'target_heat_temperature': 21.5,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+03:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+03:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 21.5,
          }),
          'zone_id': '8557539',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 21.5,
      }),
      'context': <ANY>,
      'entity_id': 'climate.thermostat',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 21.5,
        'friendly_name': 'THERMOSTAT',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'none',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'FollowSchedule',
            'target_heat_temperature': 21.5,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+03:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+03:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 21.5,
          }),
          'zone_id': '8557541',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 21.5,
      }),
      'context': <ANY>,
      'entity_id': 'climate.thermostat_2',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
  ])
# ---
# name: test_entities[minimal]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 19.0,
        'friendly_name': 'My Home',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'icon': 'mdi:thermostat',
        'max_temp': 35,
        'min_temp': 7,
        'preset_mode': 'eco',
        'preset_modes': list([
          'Reset',
          'eco',
          'away',
          'home',
          'Custom',
        ]),
        'status': dict({
          'active_system_faults': list([
          ]),
          'system_id': '3432522',
          'system_mode_status': dict({
            'is_permanent': True,
            'mode': 'AutoWithEco',
          }),
        }),
        'supported_features': <ClimateEntityFeature: 400>,
      }),
      'context': <ANY>,
      'entity_id': 'climate.my_home',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 19.0,
        'friendly_name': 'Main Room',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'none',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'FollowSchedule',
            'target_heat_temperature': 17.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+01:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+01:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 19.0,
          }),
          'zone_id': '3432576',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 17.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.main_room',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
  ])
# ---
# name: test_entities[sys_004]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 19.5,
        'friendly_name': 'Living room',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'icon': 'mdi:thermostat',
        'max_temp': 35,
        'min_temp': 7,
        'preset_mode': None,
        'preset_modes': list([
          'eco',
          'away',
        ]),
        'status': dict({
          'active_system_faults': list([
          ]),
          'system_id': '4187769',
          'system_mode_status': dict({
            'is_permanent': True,
            'mode': 'Auto',
          }),
        }),
        'supported_features': <ClimateEntityFeature: 400>,
      }),
      'context': <ANY>,
      'entity_id': 'climate.living_room',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'current_temperature': 19.5,
        'friendly_name': 'Thermostat',
        'hvac_modes': list([
          <HVACMode.OFF: 'off'>,
          <HVACMode.HEAT: 'heat'>,
        ]),
        'max_temp': 35.0,
        'min_temp': 5.0,
        'preset_mode': 'permanent',
        'preset_modes': list([
          'none',
          'temporary',
          'permanent',
        ]),
        'status': dict({
          'active_faults': list([
          ]),
          'setpoint_status': dict({
            'setpoint_mode': 'PermanentOverride',
            'target_heat_temperature': 15.0,
          }),
          'setpoints': dict({
            'next_sp_from': '2024-07-10T22:10:00+02:00',
            'next_sp_temp': 18.6,
            'this_sp_from': '2024-07-10T08:00:00+02:00',
            'this_sp_temp': 16.0,
          }),
          'temperature_status': dict({
            'is_available': True,
            'temperature': 19.5,
          }),
          'zone_id': '4187768',
        }),
        'supported_features': <ClimateEntityFeature: 401>,
        'temperature': 15.0,
      }),
      'context': <ANY>,
      'entity_id': 'climate.thermostat',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'heat',
    }),
  ])
# ---
